--- a/stylesheets/sass/main.scss
+++ b/stylesheets/sass/main.scss
@@ -135,6 +135,10 @@ body {
       border-bottom: 1px solid #EEE;
       cursor: pointer;
 
+      &:hover {
+        background-color: #D4EFFF;
+      }
+
       &:first-child {
 
         border-top: 1px solid #EEE;
@@ -144,6 +148,10 @@ body {
       &:nth-child(odd) {
 
         background-color: #F9F9F9;
+
+        &:hover {
+          background-color: #D4EFFF;
+        }
 
       }
     }
